<resources>
    <string name="app_name">LibrettoUni</string>
    <string name="ButtonRegistrazione">Registrati</string>
    <string name="TitoloRegistrazione">Registrazione</string>
    <string name="BAccedi">Accedi</string>
    <string name="Oppure">Oppure</string>
    <string name="BRegistrati">Registrati</string>
    <string name="Uni">Libretto Universitario</string>
    <string name="Benvenuto">Benvenuto</string>
    <string name="TitoloAccedi">Accedi</string>
    <string name="ButtonAccedi">Accedi</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Libretto">Il mio Libretto</string>
    <string name="add_button">add_button</string>
    <string name="non_hai_un_account">Non hai un account?</string>
    <string name="password">Password</string>
    <string name="nome_utente">Nome Utente</string>
    <string name="effettua_l_accesso">Effettua l\'accesso</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="username">Username</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="data_di_nascit">Data di nascità</string>
    <string name="back">back</string>
    <string name="voto">Voto</string>
    <string name="cfu">CFU</string>
    <string name="salva">Salva</string>
    <string name="libretto2">Libretto</string>
    <string name="voto_di_laurea">Voto di Laurea</string>
    <string name="_100">100</string>
    <string name="media">Media</string>
    <string name="aritmetica">Aritmetica</string>
    <string name="_20_00">20.00</string>
    <string name="ponderata">Ponderata</string>
    <string name="i_tuoi_dati">I tuoi Dati</string>
    <string name="i_tuoi_risultati">I tuoi risultati</string>
    <string name="area_personale">Area Personale</string>
    <string name="logout">LOGOUT</string>
    <string name="ciao">Ciao</string>
</resources>