<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15sp"
    android:paddingRight="15sp"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_color_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/benvenuto"
            android:textColor="@color/white"
            android:textSize="50sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/effettua_l_accesso"
            android:textColor="@color/white"
            android:textSize="35sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="40dp">

        <EditText
            android:id="@+id/username1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/username"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="20dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/password"
            android:textColorHint="@color/white3"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btnsignin1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/ButtonAccedi"
        android:background="@drawable/bg_color_bar"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingVertical="10dp"
        android:text="@string/non_hai_un_account"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <android.widget.Button
        android:id="@+id/btnreg"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/BRegistrati"
        android:background="@drawable/bg_color_bar"
        android:textStyle="bold"
        android:textSize="25sp" />

</LinearLayout>