<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@drawable/bg_color_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="5dp"
        android:background="@drawable/bg_color_app_corner"
        android:gravity="start">

        <ImageView
            android:id="@+id/back_button_to_login"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginHorizontal="15dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/titolo_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitoloRegistrazione"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="20dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/bg_color_app_corner">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/username"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="10dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>

        <EditText
            android:id="@+id/nm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/nome"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="10dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>

        <EditText
            android:id="@+id/cm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/cognome"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="10dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>


        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_di_nascit"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"
            android:textColorHint="@color/white3"
            android:textSize="18sp"
            android:background="@drawable/bg_color_edit_text"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/password"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="10dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>


        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/conferma_password"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="10dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>



    </LinearLayout>

    <android.widget.Button
        android:id="@+id/registrati"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/BRegistrati"
        android:background="@drawable/bg_color_bar"
        android:textStyle="bold"
        android:textSize="30sp" />

</LinearLayout>