<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15sp"
    android:paddingRight="15sp"
    tools:context=".HomeActivity"
    android:background="@drawable/bg_color_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="7dp"
        android:background="@drawable/bg_color_app_corner">

        <ImageView
            android:id="@+id/user_bt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/baseline_account_circle_24"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/area_personale"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_color_app_corner"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciao"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="30sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_tuoi_risultati"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="45sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_color_text"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voto_di_laurea"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/text_laurea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_color_text2"
                android:layout_marginTop="10dp"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/_100"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_color_text"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="5dp"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aritmetica"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text_med_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_color_text2"
                    android:layout_marginTop="1dp"
                    android:paddingVertical="10dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/_20_00"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_color_text"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ponderata"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text_med_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_color_text2"
                    android:layout_marginTop="1dp"
                    android:paddingVertical="10dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/_20_00"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingVertical="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_color_bar">

            <ImageView
                android:id="@+id/listaesami"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/baseline_menu_book_24"
                android:clickable="true"
                android:focusable="true"/>

            <ImageView
                android:id="@+id/aggiungiEsami"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/baseline_bookmark_add_24"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>