<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:background="@drawable/bg_color_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="5dp"
        android:background="@drawable/bg_color_app_corner"
        android:gravity="start">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginHorizontal="15dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/titolo_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salva esame"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="40dp"
        android:background="@drawable/bg_color_app_corner">


        <EditText
            android:id="@+id/textedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/nome"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="20dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>

        <EditText
            android:id="@+id/textedit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/voto"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="20dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>

        <EditText
            android:id="@+id/textedit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_color_edit_text"
            android:hint="@string/cfu"
            android:textColorHint="@color/white3"
            android:layout_marginBottom="20dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_color_bar"
        android:id="@+id/button_save"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/baseline_bookmark_added_24"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/salva"
            android:textStyle="bold"
            android:textSize="30sp" />

    </LinearLayout>



</LinearLayout>